Fix countdown wrap

--- a/_sass/minimal-mistakes/_countdown.scss
+++ b/_sass/minimal-mistakes/_countdown.scss
@@ -11,7 +11,7 @@
   margin-bottom: 1.5em;
   }
 
-  margin: 4em;
+  margin: 4em 0;
 }
 
 /* Custom styling for simply-countdown */
@@ -20,7 +20,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 1.25rem;
+  gap: 1em;
   font-family: $sans-serif;
 }
 
